add billables resources
